# voxengine_entity_creator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  chr_knight.yml  imgui.ini  spec.json  voxengine_entity_creator.dmg
data/shaders/: entity.frag  entity.vert  light.frag  light.vert  zero.vert
src/: cmake_defines.raw.hh  entity.hh  main.cc
src/engine/: EBO.cc  EBO.hh  VAO.cc  VAO.hh  VBO.cc  VBO.hh  camera.cc  camera.hh  line.hh  shader.cc  shader.hh
src/utils/: logger.hh
